Opened 13 years ago

Closed 13 years ago

Last modified 13 years ago

#3015 closed defect (fixed)

conversion never ends with 'apad' filter

Reported by: Anatoliy Owned by:
Priority: normal Component: avfilter
Version: git-master Keywords: apad
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug: if 'apad' filter used, conversion never ends for some videos (where 'Non-monotonous DTS in output stream')
How to reproduce:

% ffmpeg -i test_video -filter:a apad -f flv -vcodec flv -ar 22050 -y out.flv 

ffmpeg version N-56777-g5c7d86c Copyright (c) 2000-2013 the FFmpeg developers
  built on Sep 30 2013 09:42:21 with gcc 4.7 (Ubuntu/Linaro 4.7.3-1ubuntu1)
  configuration: --enable-filters --enable-libmp3lame
  libavutil      52. 46.100 / 52. 46.100
  libavcodec     55. 33.101 / 55. 33.101
  libavformat    55. 18.104 / 55. 18.104
  libavdevice    55.  3.100 / 55.  3.100
  libavfilter     3. 88.100 /  3. 88.100
  libswscale      2.  5.100 /  2.  5.100
  libswresample   0. 17.103 /  0. 17.103
Guessed Channel Layout for  Input Stream #0.1 : mono
Input #0, avi, from '/home/tobo/Desktop/test-data/VIDEO-4719':
  Duration: 00:00:03.42, start: 0.000000, bitrate: 1043 kb/s
    Stream #0:0: Video: mjpeg (MJPG / 0x47504A4D), yuvj422p(pc), 320x240, 15.17 fps, 15.20 tbr, 15.20 tbn, 15.20 tbc
    Stream #0:1: Audio: pcm_mulaw ([7][0][0][0] / 0x0007), 8000 Hz, mono, s16, 64 kb/s
[swscaler @ 0x2c6a040] deprecated pixel format used, make sure you did set range correctly
Output #0, flv, to 'out.flv':
  Metadata:
    encoder         : Lavf55.18.104
    Stream #0:0: Video: flv1 (flv) ([2][0][0][0] / 0x0002), yuv420p, 320x240, q=2-31, 200 kb/s, 1k tbn, 15.20 tbc
    Stream #0:1: Audio: mp3 (libmp3lame) ([2][0][0][0] / 0x0002), 22050 Hz, mono, s16p
Stream mapping:
  Stream #0:0 -> #0:0 (mjpeg -> flv)
  Stream #0:1 -> #0:1 (pcm_mulaw -> libmp3lame)
Press [q] to stop, [?] for help
[libmp3lame @ 0x2c837a0] Queue input is backward in time
[flv @ 0x2c83000] Non-monotonous DTS in output stream 0:1; previous: 2, current: -418293516410647401; changing to 2. This may result in incorrect timestamps in the output file.
[flv @ 0x2c83000] Non-monotonous DTS in output stream 0:1; previous: 2, current: -418293516410647375; changing to 2. This may result in incorrect timestamps in the output file.
[flv @ 0x2c83000] Non-monotonous DTS in output stream 0:1; previous: 2, current: -418293516410647348; changing to 2. This may result in incorrect timestamps in the output file.
[flv @ 0x2c83000] Non-monotonous DTS in output stream 0:1; previous: 2, current: -418293516410647322; changing to 2. This may result in incorrect timestamps in the output file.
...

Attachments (1)

test_video (435.4 KB ) - added by Anatoliy 13 years ago.

Download all attachments as: .zip

Change History (9)

by Anatoliy, 13 years ago

Attachment: test_video added

comment:1 by Carl Eugen Hoyos, 13 years ago

Priority: importantnormal

Does the conversion work if you don't use the apad filter?

Is this a regression?

comment:2 by Anatoliy, 13 years ago

Yes, it works without apad filter.
Regression? Hmm... I don't think so

in reply to:  2 comment:3 by Carl Eugen Hoyos, 13 years ago

Replying to tborisow:

Yes, it works without apad filter.

I agree that it seems the filter does not react as expected (especially since the documentation does not warn about the behaviour).

But my question is: Did you encounter this problem when testing an actual use-case (and just sent a shorter sample) or did you test what happens if you use the apad filter in a conversion that does not need additional padding (which definitely is also helpful)?

comment:4 by Anatoliy, 13 years ago

I was trying to use this filter for all files uploaded by users (because I don't know whether some new file needs an audio padding)

comment:5 by Carl Eugen Hoyos, 13 years ago

Status: newopen

Thank you for the clarification!

comment:6 by Michael Niedermayer, 13 years ago

Reproduced by developer: set
Resolution: fixed
Status: openclosed

comment:7 by Michael Niedermayer, 13 years ago

Note, you need -shortest apad without shortest is meaningless

comment:8 by Anatoliy, 13 years ago

Thank you!

Note: See TracTickets for help on using tickets.