avfilter/ff_filter_frame_needs_framing: fix handling of AV_NOPTS_VALUE

Fixes Ticket3015

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>